<resources>
    <string name="app_name" translatable="false">Card Check</string>

    <string name="card_kkm">KKM card</string>
    <string name="card_wszib">Student card, WSZiB</string>
    <string name="card_agh">Student card, AGH</string>
    <string name="card_uj">Student card, UJ</string>
    <string name="card_pk">Student card, PK</string>
    <string name="card_ue">Student card, UE</string>
    <string name="card_ur">Student card, UR</string>
    <string name="card_pwst">Student card, PWST</string>
    <string name="card_am">Student card, AM</string>
    <string name="card_wse">Student card, WSE</string>
    <string name="card_aik">Student card, AIK (WSFP)</string>
    <string name="card_up">Student card, UP</string>
    <string name="card_wsh">Student card, WSH</string>
    <string name="card_ka">Student card, KA</string>
    <string name="card_wsei">Student card, WSEI</string>
    <string name="card_ifj_pan">Student card, IFJ PAN</string>
    <string name="card_if_pan">Student card, IF PAN</string>
    <string name="card_ikifp_pan">Student card, IKiFP PAN</string>

    <string name="hint_client_number">Client number</string>
    <string name="hint_kkm_card_number">KKM card number</string>
    <string name="hint_album_number">Album number</string>

    <string name="card_add">Add card</string>
    <string name="card_expiring">Your card is expiring</string>
    <string name="card_expired">Card expired</string>
    <string name="card_expired_message">Your card %s is expired</string>

    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="information">Information</string>
    <string name="email">Email</string>
    <string name="email_send">Send email</string>

    <string name="card_status_unknown">Unknown</string>
    <string name="card_status_expired">Expired</string>
    <string name="card_status_valid">Valid</string>
    <string name="edit_tickets">Edit list</string>
    <string name="understand_and_accept">I understand and accept</string>
    <string name="decline">Decline</string>
    <string name="rules_dialog_title">Terms of use</string>
    <string name="forum" translatable="false">Forum</string>
    <string name="days_before_expire_summary">%d days before</string>
    <string name="days_before_expire_title">Inform about card expiry</string>


</resources>
