<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_tickets"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:title="@string/information"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_forum"
                android:title="@string/forum"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_contact"
                android:title="@string/email_send"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>